# TRABALHO-LPI

./: .gitignore  CMakeLists.txt  README.md  functions.h  main.c  mainparser  parser_funções  parser_header  pdf_to_text.c  teste1.txt
GUI/output/: GUI.c
src/: excel_utils.c  excel_utils.h  gui.c  gui.h  main.c  parser.c  parser.h  pdf_utils.c  pdf_utils.h
src/gui/: gui.c
src/parser/: parser.c  parser.h
